# Narview

./: .gitignore  CONTEXT.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
apps/desktop/: package.json  tailwind.config.ts  tsconfig.json
apps/mobile/: README.md  pubspec.yaml
docs/adr/: 0001-remote-first-pull-request-review.md  0002-local-per-user-reviewed-state.md  0003-key-reviewed-state-by-github-review-thread-id.md  0004-support-github-review-thread-writes.md  0005-overview-and-queue-first-review-flow.md  0006-deterministic-hotspots-before-ai-ranking.md  0007-page-and-cache-diffs-on-demand.md  0008-limited-offline-read-support.md  0009-github-device-flow-with-pat-fallback.md  0010-use-tauri-react-typescript-and-rust.md  0011-saved-repository-workspace-with-pr-url-quick-open.md  0012-one-github-account-for-v1.md  0013-global-hotspot-defaults-with-repository-overrides.md  0014-github-compatible-diffs-with-internal-enrichment.md  0015-defer-full-github-review-submission.md  0016-handoff-packets-instead-of-direct-ai-code-changes.md  0017-structured-handoff-packets-with-markdown-export.md  0018-use-shadcn-ui-as-component-foundation.md  0019-use-tailwind-with-shadcn-ui.md  0020-guided-review-workspace-layout.md  0021-independent-review-paths-not-coderabbit-change-stack.md  (+55 more)
scripts/: prepare-tauri-release-config.mjs  validate-release-config.mjs  validate-v1-acceptance.mjs  verify-release-artifacts.mjs
src/: App.smoke.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  main.rs  thread_actions.rs  workspace.rs
src/lib/: auth.ts  (+29 more)
(+104 files in other folders)
